--- a/css/flexible-grids.css
+++ b/css/flexible-grids.css
@@ -1,16 +1,15 @@
 .grid {
+  display: flex;
   border: 1px solid red;
-  overflow: hidden;
 }
 
 .unit {
-  float: left;
   width: 33.3333%;
-  background-color: #fff
+  background-color: #fff;
 }
 
 .unit-2-3 {
-  width: 66.6667%;
+  width: 66.6666%;
 }
 
 .gutter {
