--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
 @viewport { width: device-width; scale: 1; }
 
 html {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 
@@ -23,7 +24,6 @@ html {
 
 body {
   margin: 0;
-  padding: 0;
 }
 
 .img-flex {
