--- a/css/responsive-grids.css
+++ b/css/responsive-grids.css
@@ -1,16 +1,12 @@
 .grid {
-  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .unit {
-  float: left;
-  background-color: #fff
+  background-color: #fff;
 }
 
-/*
-  Instead of including this class in your grids.css
-  Use the one included in your modular typography.css
-*/
 .gutter {
   padding-left: 1em;
   padding-right: 1em;
@@ -20,15 +16,31 @@
   width: 100%;
 }
 
-@media only screen and (min-width: 30em) {
+.unit-s-1-2 {
+
+}
+
+@media only screen and (min-width: 38em) {
+
+  .unit-m-1 {
+    width: 100%;
+  }
 
   .unit-m-1-2 {
     width: 50%;
   }
 
+  .unit-m-1-3 {
+
+  }
+
+  .unit-m-2-3 {
+
+  }
+
 }
 
-@media only screen and (min-width: 50em) {
+@media only screen and (min-width: 60em) {
 
   .unit-l-1-3 {
     width: 33.3333%;
